<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">new login</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="shoe_store_app">Shoe Store App</string>
    <string name="welcome_to_shoe_app">welcome to Shoe app</string>
    <string name="next">next</string>
    <string name="instruction">The shoe listing page will show the list of shoes and show a button for adding a new shoe, while the detail page will be for adding a shoe entry. All entries will be saved only as long as the app is running.</string>
    <string name="logging_in_with_existing">logging in with an existing account</string>
    <string name="add_new_shoe_description">add new shoe</string>
    <string name="company">Company</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>
    <string name="enter_shoe_size">enter shoe size</string>
    <string name="enter_company_name">enter company name</string>
    <string name="enter_shoe_name">enter shoe name</string>
    <string name="write_description">write description</string>
    <string name="logout">logout</string>
</resources>
