<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">


    <TextView
        android:id="@+id/shoe_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoe_name"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/shoe_name_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/company_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_name_textView" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/company_textView"
        app:layout_constraintTop_toBottomOf="@+id/shoeName" />


    <TextView
        android:id="@+id/shoe_size_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoe_size"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_textView" />

    <TextView
        android:id="@+id/shoeSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/shoe_size_textView"
        app:layout_constraintTop_toBottomOf="@+id/company" />


    <TextView
        android:id="@+id/description_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoe_size_textView" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"        app:layout_constraintStart_toEndOf="@+id/description_textView"
        app:layout_constraintTop_toBottomOf="@+id/shoeSize" />
</androidx.constraintlayout.widget.ConstraintLayout>